ScalaFX statt JavaFX